tests/invalid_date1.err_exp
invalid_date1.inp:1: error: in field #1, not a valid date
