tests/invalid_date1.inp
30/02/1977,30/02/1977
